add register vehicle

--- a/app.json
+++ b/app.json
@@ -36,7 +36,7 @@
     "web": {
       "favicon": "./assets/img/CarlifeIcon.png"
     },
-    "description": "",
+    "description": "Resolve DW",
     "githubUrl": "https://github.com/ksromero92/CarLife"
   }
 }
